# skills

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: caveman  diagnose  organize-disk  resume-download  to-issues  to-prd  write-a-skill  zoom-out
databroker-scanner/: .gitignore  LICENSE  PLAN.md  README.md  config.example.yaml  pyproject.toml
databroker-scanner/src/databroker_scanner/: __init__.py  cli.py  config.py  consent.py  models.py  registry.py  scoring.py
databroker-scanner/src/databroker_scanner/brokers/: __init__.py  registry.yaml
databroker-scanner/src/databroker_scanner/brokers/automated/: __init__.py
databroker-scanner/src/databroker_scanner/core/: __init__.py  broker.py
databroker-scanner/src/databroker_scanner/reporting/: __init__.py  exporters.py  html.py
databroker-scanner/src/databroker_scanner/reporting/templates/: report.html.j2
databroker-scanner/src/databroker_scanner/storage/: db.py
databroker-scanner/tests/: test_consent_and_worklist.py  test_registry.py  test_scoring.py
skills/engineering/: README.md
skills/engineering/coding-fundamentals-tutorial/: SKILL.md  curriculum.md  exercises.md  faq.md
skills/productivity/: README.md
skills/productivity/organize-disk/: SKILL.md
skills/productivity/resume-download/: SKILL.md
skills/productivity/resume-download/scripts/: resume_download.py
tools/disk-butler/: .gitignore  AGENTS.md  README.md
tools/disk-butler/diskbutler/: __init__.py  analyze.py  cli.py  db.py  indexer.py  quarantine.py  search.py  server.py  winclean.py
tools/disk-butler/diskbutler/static/: index.html
tools/disk-butler/tests/: test_diskbutler.py
